# multi_choice_app

./: .gitignore  Cargo.toml  README.md  swift.yaml
ChoiceQuiz/ChoiceQuiz/: AppDelegate.swift  ContentView.swift  Info.plist  Quiz.swift  SceneDelegate.swift  swift.json
ChoiceQuiz/ChoiceQuiz.xcodeproj/: project.pbxproj
ChoiceQuiz/ChoiceQuiz.xcodeproj/project.xcworkspace/xcuserdata/nash.xcuserdatad/: UserInterfaceState.xcuserstate
ChoiceQuiz/ChoiceQuiz.xcodeproj/xcuserdata/nash.xcuserdatad/xcschemes/: xcschememanagement.plist
ChoiceQuiz/ChoiceQuiz/Assets.xcassets/AppIcon-1.appiconset/: Contents.json
ChoiceQuiz/ChoiceQuiz/Assets.xcassets/AppIcon.appiconset/: Contents.json
converter/: swift.json  swift.yaml
converter/src/: main.rs
src/: main.rs
